--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "0.16.1",
+    "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-bootstrap": "0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "5.0.4",
     "redux": "3.6.0",
-    "redux-promise": "0.5.3"
+    "redux-promise": "0.5.3",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
